fixed weird overflow

--- a/public/static/css/vv-style.css
+++ b/public/static/css/vv-style.css
@@ -1,3 +1,8 @@
+body{
+    width: 100%;
+    overflow-x: clip;
+}
+
 .break {
     width: 100%;
     flex-grow: 1;
@@ -6,7 +11,7 @@
 .main-hero-bg {
     background-color: #000000;
     background-size: cover;
-    min-width: 100vw;
+    width: 100vw;
     min-height: 100vh;
 }
 
@@ -18,6 +23,7 @@
 .main-bg {
     background-color: #111827;
     background-size: cover;
+    width: 100vw;
 }
 
 .vv-ellipses,
